# siyuan-notion-importer

./: .gitignore
python/src/: api.py  main.py
rust/: Cargo.toml
rust/importer-backend/: Cargo.toml
rust/importer-backend/src/: api.rs  block.rs  lib.rs  notebook.rs  update_block.rs
rust/importer-ffi/: .gitignore  Cargo.toml  build.rs
rust/importer-ffi/src/: error.rs  lib.rs  lib.udl
src/: api.py  main.py
swift/SiyuanImporter/: .gitignore
swift/SiyuanImporter/SiyuanImporter/: ContentView.swift  SiyuanImporterApp.swift
swift/SiyuanImporter/SiyuanImporter.xcodeproj/: project.pbxproj
swift/SiyuanImporter/SiyuanImporter.xcodeproj/project.xcworkspace/xcuserdata/max.xcuserdatad/: UserInterfaceState.xcuserstate
swift/SiyuanImporter/SiyuanImporter.xcodeproj/xcuserdata/max.xcuserdatad/xcschemes/: xcschememanagement.plist
