[workspace]
resolver = "2"
members = ["importer-backend", "importer-ffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "*"
fancy-regex = "0.14.0"
glob = "*"
regex = "*"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.43.0", features = ["fs", "full"] }